force-app/main/default/objects/Account/fields/email_fields__c.field-meta.xml
<CustomField>
    <fullName>email_fields__c</fullName>
    <label>email fields</label>
    <type>Email</type>
</CustomField>