force-app/main/default/objects/Account/fields/khg__c.field-meta.xml
<CustomField>
    <fullName>khg__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>khg</label>
    <type>AutoNumber</type>
</CustomField>