force-app/main/default/objects/Account/fields/X29_text_field__c.field-meta.xml
<CustomField>
    <fullName>X29_text_field__c</fullName>
    <label>29 text field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>